--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
                 <ul class="nav nav-main">
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/store.html">STORE</a></li>
-                    <li><a href="/about.html">ABOUT</a></li>
+                    <li><a class="selected" href="/about.html">ABOUT</a></li>
                 </ul>
             </nav>
             
