--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <ul class="nav nav-main">
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a class="selected" href="/index.html">HOME</a></li>
                     <li><a href="/store.html">STORE</a></li>
                     <li><a href="/about.html">ABOUT</a></li>
                 </ul>
