--- a/store.html
+++ b/store.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul class="nav nav-main">
                     <li><a href="/index.html">HOME</a></li>
-                    <li><a href="/store.html">STORE</a></li>
+                    <li><a class="selected" href="/store.html">STORE</a></li>
                     <li><a href="/about.html">ABOUT</a></li>
                 </ul>
             </nav>
