changed icons in footer + cleaned it up

--- a/about.html
+++ b/about.html
@@ -182,20 +182,14 @@
             <h3 class="name">Hans zimmer</h3>
             
             <ul>
-                <li>
-                    <a href="https://www.youtube.com/c/HansZimmer" target="_blank">
-                        <img src="images/youtube-logo.png" alt="youtube-logo.png" srcset=""></img>
-                    </a>
+                <li class="youtube-logo">
+                    <a href="https://www.youtube.com/c/HansZimmer" target="_blank"><img class="youtube-logo-image" src="images/youtube-logo.svg" alt="youtube-logo.svg" srcset=""></a>
                 </li>
-                <li>
-                    <a href="https://open.spotify.com/artist/0YC192cP3KPCRWx8zr8MfZ" target="_blank">
-                        <img src="images/spotify-logo.png" alt="spotify-logo.pngn" srcset=""></img>
-                    </a>
+                <li class="spotify-logo">
+                    <a href="https://open.spotify.com/artist/0YC192cP3KPCRWx8zr8MfZ" target="_blank"><img class="spotify-logo-image" src="images/spotify-logo.svg" alt="spotify-logo.svg" srcset=""></a>
                 </li>
-                <li>
-                    <a href="https://www.facebook.com/hanszimmer" target="_blank">
-                        <img src="/images/facebook-logo.png" alt="facebook-logo.png" srcset=""></a>
-                    </a>
+                <li class="facebook-logo">
+                    <a href="https://www.facebook.com/hanszimmer" target="_blank"><img class="facebook-logo-image" src="/images/facebook-logo.svg" alt="facebook-logo.svg" srcset=""></a>
                 </li>
             </ul>
             <sub>
