added charset utf-8

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
         <title>Hans Zimmer | About</title>
         <meta name="description" content="Learn about hans zimmer">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+        <meta charset="utf-8">
     </head>
     <body>
         <header>
