--- a/store.html
+++ b/store.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="store.js" async></script>
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+        <meta charset="utf-8">
     </head>
 
     <body>
