--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Hans Zimmer</title>
         <meta name="description" content="A simple website about Hans Zimmer.">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+        <meta charset="utf-8">
     </head>
     <body>
         <header>
